fix: applied shrink-0 to icons; adapted ProfileHeader to show properly on mobile

--- a/frontend/app/globals.css
+++ b/frontend/app/globals.css
@@ -577,6 +577,7 @@
 @utility icon-* {
   height: --value(--icon- *);
   width: --value(--icon- *);
+  flex-shrink: 0;
 }
 @utility icon-bordered-* {
   height: --value(--icon-bordered- *);
